fix the command line for the examples